--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
         border-radius: 50%;
         background-color: aquamarine;
           }
-
+        
       .square{
         height: 75px;
         width: 75px;
         background-color: green;
+      }
+
+      .triangle{
+        width: 0;
+        height: 0;
+        border-left: 35px solid transparent;
+        border-right: 35px solid transparent;
+
+        border-bottom: 35px solid red;
       }
     </style>
     <nav>
@@ -23,12 +32,11 @@
   <body>
     <h1>Shapes</h1>
     <div class="circle">   </div>
+    <p>This is a circle</p>
     <div class="square"> </div>
-    <div> 
-
-    </div>
-      <h1> </h1>
-    <div>  </div>
+    <p>this is a square</p>
+    <div class="triangle">  </div>
+    <p>this is a triangle</p>
     <div></div>
 
 
